# FFNetwork

./: CMakeLists.txt  main.cpp
include/: activation_fn.h  l_teacher.h  l_techer.h  layer.h  llayer.h  neuralnetwork.h  teacher.h
mlm/: matrix.h  vec.h
mlm/test_code/: matrix.h
mnist/: CMakeLists.txt
mnist/include/: mnist_reader.h  mnist_reader_common.h
src/: activation_fn.cpp  l_teacher.cpp  layer.cpp  neuralnetwork.cpp  teacher.cpp
